--- a/Covid_Respiratory care/app/src/main/res/navigation/nav_graph.xml
+++ b/Covid_Respiratory care/app/src/main/res/navigation/nav_graph.xml
@@ -1,29 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    android:id="@+id/main_activity_navgraph"
+    app:startDestination="@id/homeFragment">
 
     <fragment
-        android:id="@+id/FirstFragment"
-        android:name="com.covidproject.covid_respiratorycare.FirstFragment"
-        android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_map">
-
-        <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
-    </fragment>
-
+        android:id="@+id/searchFragment"
+        android:name="com.covidproject.covid_respiratorycare.ui.main.MainFragment"
+        android:label="mainFragment"/>
+    <!--        android:name="com.cock_tail.test_xml.ui.main.keyword.KeywordrecommandFragment"-->
     <fragment
-        android:id="@+id/SecondFragment"
-        android:name="com.covidproject.covid_respiratorycare.SecondFragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
+        android:id="@+id/homeFragment"
+        android:name="com.covidproject.covid_respiratorycare.ui.map.MappageFragment"
+        android:label="mapFragment"/>
 
-        <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
-    </fragment>
 </navigation>
