--- a/Covid_Respiratory care/app/src/main/res/layout/fragment_main.xml
+++ b/Covid_Respiratory care/app/src/main/res/layout/fragment_main.xml
@@ -73,7 +73,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginStart="20dp"
             />
-        <TextView
+        <com.github.mikephil.charting.charts.BarChart
             android:layout_width="0dp"
             android:layout_height="200dp"
             android:text="그래프"
@@ -81,8 +81,9 @@
             app:layout_constraintTop_toBottomOf="@+id/main_daily_title_tv"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:background="@color/customcolor2"
-            />
+            android:background="@color/customcolor2"/>
+
+
         <TextView
             android:layout_width="0dp"
             android:layout_height="0dp"
