--- a/Covid_Respiratory care/app/src/main/res/layout/fragment_main.xml
+++ b/Covid_Respiratory care/app/src/main/res/layout/fragment_main.xml
@@ -73,6 +73,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginStart="20dp"
             />
+
         <com.github.mikephil.charting.charts.BarChart
             android:layout_width="0dp"
             android:layout_height="200dp"
@@ -83,6 +84,16 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:background="@color/customcolor2"/>
 
+        <com.github.mikephil.charting.charts.LineChart
+            android:layout_width="0dp"
+            android:layout_height="200dp"
+            android:layout_marginHorizontal="20dp"
+            android:text="그래프"
+            android:id="@+id/main_daily_graph2"
+            app:layout_constraintTop_toBottomOf="@+id/main_daily_title_tv"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:background="@android:color/transparent"/>
 
         <TextView
             android:layout_width="0dp"
