--- a/Covid_Respiratory care/app/src/main/res/layout/fragment_mappage.xml
+++ b/Covid_Respiratory care/app/src/main/res/layout/fragment_mappage.xml
@@ -17,4 +17,13 @@
         android:layout_height="match_parent"
         />
 
+<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="130dp"-->
+<!--        android:background="@color/black"-->
+<!--        android:id="@+id/marker_info_layout"-->
+<!--        >-->
+
+<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
+
 </androidx.constraintlayout.widget.ConstraintLayout>
