--- a/Covid_Respiratory care/app/src/main/res/layout/fragment_main.xml
+++ b/Covid_Respiratory care/app/src/main/res/layout/fragment_main.xml
@@ -106,6 +106,16 @@
             app:layout_constraintTop_toBottomOf="@+id/main_daily_graph"
             />
 
+        <com.github.mikephil.charting.charts.PieChart
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:id="@+id/main_abroad_piechart"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/main_daily_graph"
+            />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
