--- a/Covid_Respiratory care/app/src/main/res/layout/item_naver_news.xml
+++ b/Covid_Respiratory care/app/src/main/res/layout/item_naver_news.xml
@@ -7,7 +7,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="10dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
