--- a/Covid_Respiratory care/app/src/main/res/values/colors.xml
+++ b/Covid_Respiratory care/app/src/main/res/values/colors.xml
@@ -15,6 +15,8 @@
     <color name="customcolor3">#859DD6
     </color>
     <color name="deepblue">#165188</color>
+    <color name="dpblue">#1D74C5</color>
+    <color name="dpblue_80">#801D74C5</color>
     <color name="navergreen">#66C971</color>
 
 </resources>
