--- a/Covid_Respiratory care/app/src/main/res/values/themes.xml
+++ b/Covid_Respiratory care/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Covid_Respiratorycare" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Covid_Respiratorycare" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/customcolor3</item>
         <item name="colorPrimaryVariant">@color/customcolor3</item>
