feat : 220510_지도 커스텀 및 메인UI 수정

--- a/Covid_Respiratory care/app/src/main/res/layout/activity_splash.xml
+++ b/Covid_Respiratory care/app/src/main/res/layout/activity_splash.xml
@@ -28,7 +28,11 @@
         android:textColor="@color/deepblue"
         android:fontFamily="@font/font_hannaair"
         />
-
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        />
 </LinearLayout>
 
 </layout>
