--- a/Covid_Respiratory care/app/src/main/res/values/colors.xml
+++ b/Covid_Respiratory care/app/src/main/res/values/colors.xml
@@ -18,5 +18,6 @@
     <color name="dpblue">#1D74C5</color>
     <color name="dpblue_80">#801D74C5</color>
     <color name="navergreen">#66C971</color>
+    <color name="navergreen_80">#8066C971</color>
 
 </resources>
