--- a/Covid_Respiratory care/app/src/main/res/layout/activity_main.xml
+++ b/Covid_Respiratory care/app/src/main/res/layout/activity_main.xml
@@ -16,34 +16,34 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <androidx.appcompat.widget.Toolbar
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="match_parent"
-        android:id="@+id/main_toolbar"
-        android:layout_height="wrap_content"
-        android:background="@color/dpblue_80">
+<!--    <androidx.appcompat.widget.Toolbar-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:id="@+id/main_toolbar"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:background="@color/dpblue_80">-->
 
-        <ImageButton
-            android:layout_width="30dp"
-            android:layout_height="36dp"
-            android:id="@+id/main_drawer_bt"
-            android:src="@drawable/baseline_drag_indicator_white_36"
-            android:background="@android:color/transparent"
-            android:scaleType="centerCrop"
-            android:layout_marginEnd="10dp"
-            />
+<!--        <ImageButton-->
+<!--            android:layout_width="30dp"-->
+<!--            android:layout_height="36dp"-->
+<!--            android:id="@+id/main_drawer_bt"-->
+<!--            android:src="@drawable/baseline_drag_indicator_white_36"-->
+<!--            android:background="@android:color/transparent"-->
+<!--            android:scaleType="centerCrop"-->
+<!--            android:layout_marginEnd="10dp"-->
+<!--            />-->
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Covid-19 In Seoul"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:fontFamily="@font/font_hannaair"
-            />
-    </androidx.appcompat.widget.Toolbar>
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="Covid-19 In Seoul"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:textSize="20sp"-->
+<!--            android:textStyle="bold"-->
+<!--            android:fontFamily="@font/font_hannaair"-->
+<!--            />-->
+<!--    </androidx.appcompat.widget.Toolbar>-->
 
     <FrameLayout
         android:id="@+id/main_fragment_container"
@@ -52,7 +52,7 @@
         app:layout_constraintBottom_toTopOf="@+id/main_bottomnavi"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/main_toolbar"
+        app:layout_constraintTop_toTopOf="parent"
         />
 
 
@@ -72,7 +72,7 @@
         android:layout_width="230dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="@color/customcolor3"
+        android:background="@drawable/img_drawer_back"
         android:paddingStart="15dp"
         android:layout_gravity="left"
         >
@@ -91,6 +91,7 @@
             android:layout_height="wrap_content"
             android:textSize="15dp"
             android:text="○ 서울시 전광판"
+            android:id="@+id/main_menu_board_tv"
             android:layout_marginTop="15dp"
             android:textColor="@color/white"
             android:textStyle="bold"
@@ -102,6 +103,7 @@
             android:layout_height="wrap_content"
             android:textSize="15dp"
             android:text="○ 서울시 일일 확진자"
+            android:id="@+id/main_menu_daily_tv"
             android:layout_marginTop="15dp"
             android:textColor="@color/white"
             android:textStyle="bold"
@@ -136,6 +138,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="15dp"
+            android:id="@+id/main_menu_naver_news_tv"
             android:text="○ 네이버 뉴스"
             android:layout_marginTop="15dp"
             android:textColor="@color/white"
@@ -149,8 +152,9 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="15dp"
-            android:text="내 주변 코로나 병원 알아보기"
+            android:textSize="17dp"
+            android:text="○ 내 주변 코로나 병원 알아보기"
+            android:id="@+id/main_menu_coronahospital_tv"
             android:layout_marginTop="15dp"
             android:textColor="@color/white"
             android:textStyle="bold"
