--- a/Covid_Respiratory care/app/src/main/res/layout/activity_map.xml
+++ b/Covid_Respiratory care/app/src/main/res/layout/activity_map.xml
@@ -1,17 +1,185 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
-<LinearLayout
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    >
+    <data>
+        <variable
+            name="mapViewModel"
+            type="com.covidproject.covid_respiratorycare.ui.map.MapViewModel" />
+    </data>
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
 
     <com.naver.maps.map.MapView
     android:id="@+id/map_mapView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="뒤로가기"
+            android:layout_margin="20dp"
+            android:textSize="25sp"
+            />
+    </LinearLayout>
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/border_mapcontainer"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/map_hospital_container"
+        android:visibility="visible"
+        android:paddingHorizontal="20dp"
+        android:paddingBottom="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="2"
+            >
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{mapViewModel.hospitalname}"
+                    android:id="@+id/map_hospitalname_tv"
+                    android:gravity="bottom"
+                    android:textColor="@color/dpblue"
+                    android:layout_weight="1"
+                    android:maxLines="1"
+                    android:textSize="23sp"
+                    android:ellipsize="end"
+                    android:textStyle="bold"
+                    android:fontFamily="@font/font_hannaair"
+                    />
+
+
+            </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{mapViewModel.addr}"
+                android:maxLines="1"
+                android:textSize="14sp"
+                />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="전화번호 : "
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:fontFamily="@font/font_hannaair"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{mapViewModel.telno}"
+                    android:textSize="20sp"
+                    android:textColor="@color/dpblue_80"
+                    android:textStyle="bold"
+                    android:fontFamily="@font/font_hannaair"
+                    />
+            </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{mapViewModel.startday}"
+                android:layout_marginTop="10dp"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:fontFamily="@font/font_hannaair"
+                />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="PCR 가능여부 : "
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:fontFamily="@font/font_hannaair"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{mapViewModel.ispcr}"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:fontFamily="@font/font_hannaair"
+                    />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="신속 항원 검사 가능여부 : "
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:fontFamily="@font/font_hannaair"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{mapViewModel.israt}"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:fontFamily="@font/font_hannaair"
+                    />
+            </LinearLayout>
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginTop="30dp"
+            android:visibility="gone"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:text="요양종별코드"
+                />
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="90dp"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/img_covid_splash"/>
+            <ImageView
+                android:layout_width="35dp"
+                android:layout_gravity="right"
+                android:layout_height="35dp"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/img_covid_splash"/>
+        </LinearLayout>
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
