feat : 220510 네이버 맵 연동, 전화 연동, 다음 뉴스 API연결

--- a/Covid_Respiratory care/app/src/main/res/layout/fragment_main.xml
+++ b/Covid_Respiratory care/app/src/main/res/layout/fragment_main.xml
@@ -79,6 +79,13 @@
                         android:layout_height="wrap_content"
                         android:text="네이버 뉴스"
                         android:textSize="15sp" />
+
+                    <com.google.android.material.tabs.TabItem
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="다음 뉴스"
+                        android:textSize="15sp" />
+
                 </com.google.android.material.tabs.TabLayout>
             </com.google.android.material.appbar.CollapsingToolbarLayout>
         </com.google.android.material.appbar.AppBarLayout>
@@ -382,6 +389,31 @@
 
                     </LinearLayout>
 
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/main_daumnews_tv"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="다음 코로나 관련 뉴스"
+                            android:textColor="@color/deepblue"
+                            android:textSize="20sp"
+                            android:textStyle="bold" />
+
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/main_daumnews_rv"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="15dp"
+                            android:orientation="vertical"
+                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                            tools:listitem="@layout/item_daum_news" />
+
+                    </LinearLayout>
 
                 </LinearLayout>
 
