--- a/Covid_Respiratory care/app/src/main/res/layout/activity_map.xml
+++ b/Covid_Respiratory care/app/src/main/res/layout/activity_map.xml
@@ -1,185 +1,233 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    >
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <data>
+
         <variable
             name="mapViewModel"
             type="com.covidproject.covid_respiratorycare.ui.map.MapViewModel" />
     </data>
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
 
-    <com.naver.maps.map.MapView
-    android:id="@+id/map_mapView"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    />
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="뒤로가기"
-            android:layout_margin="20dp"
-            android:textSize="25sp"
-            />
-    </LinearLayout>
+        android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/border_mapcontainer"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:id="@+id/map_hospital_container"
-        android:visibility="visible"
-        android:paddingHorizontal="20dp"
-        android:paddingBottom="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        <com.naver.maps.map.MapView
+            android:id="@+id/map_mapView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_weight="2"
-            >
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                >
+            android:paddingBottom="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@{mapViewModel.hospitalname}"
-                    android:id="@+id/map_hospitalname_tv"
-                    android:gravity="bottom"
-                    android:textColor="@color/dpblue"
-                    android:layout_weight="1"
-                    android:maxLines="1"
-                    android:textSize="23sp"
-                    android:ellipsize="end"
-                    android:textStyle="bold"
-                    android:fontFamily="@font/font_hannaair"
-                    />
-
-
-            </LinearLayout>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@{mapViewModel.addr}"
-                android:maxLines="1"
-                android:textSize="14sp"
-                />
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="전화번호 : "
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:fontFamily="@font/font_hannaair"
-                    />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@{mapViewModel.telno}"
-                    android:textSize="20sp"
-                    android:textColor="@color/dpblue_80"
-                    android:textStyle="bold"
-                    android:fontFamily="@font/font_hannaair"
-                    />
-            </LinearLayout>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@{mapViewModel.startday}"
-                android:layout_marginTop="10dp"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                android:fontFamily="@font/font_hannaair"
-                />
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="PCR 가능여부 : "
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:fontFamily="@font/font_hannaair"
-                    />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@{mapViewModel.ispcr}"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:fontFamily="@font/font_hannaair"
-                    />
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="신속 항원 검사 가능여부 : "
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:fontFamily="@font/font_hannaair"
-                    />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@{mapViewModel.israt}"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:fontFamily="@font/font_hannaair"
-                    />
-            </LinearLayout>
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginTop="30dp"
-            android:visibility="gone"
-            android:orientation="vertical">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:text="요양종별코드"
-                />
             <ImageView
-                android:layout_width="150dp"
-                android:layout_height="90dp"
-                android:layout_marginTop="10dp"
-                android:src="@drawable/img_covid_splash"/>
-            <ImageView
-                android:layout_width="35dp"
-                android:layout_gravity="right"
+                android:layout_width="25dp"
                 android:layout_height="35dp"
-                android:layout_marginTop="10dp"
-                android:src="@drawable/img_covid_splash"/>
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="60dp"
+                android:id="@+id/map_back_iv"
+                android:src="@drawable/baseline_arrow_back_ios_black_36" />
         </LinearLayout>
-    </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/map_hospital_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/border_mapcontainer"
+                android:paddingHorizontal="20dp"
+                android:paddingBottom="20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:orientation="vertical"
+                    >
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="30dp">
+
+                        <TextView
+                            android:id="@+id/map_hospitalname_tv"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:ellipsize="end"
+                            android:fontFamily="@font/font_hannaair"
+                            android:gravity="bottom"
+                            android:maxLines="1"
+                            android:onClick="@{() -> mapViewModel.onNaverAppEvent(mapViewModel.lat,mapViewModel.lng,mapViewModel.hospitalname)}"
+                            android:text="@{mapViewModel.hospitalname}"
+                            android:textColor="@color/dpblue"
+                            android:textSize="23sp"
+                            android:textStyle="bold" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/font_hannaair"
+                            android:text="@{mapViewModel.hospitalcode}"
+                            android:textSize="16sp"
+                            android:layout_marginStart="10dp"
+                            android:textStyle="bold" />
+
+                    </LinearLayout>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:maxLines="1"
+                        android:text="@{mapViewModel.addr}"
+                        android:textSize="14sp" />
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/font_hannaair"
+                            android:text="전화번호 : "
+                            android:textSize="20sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:onClick="@{() -> mapViewModel.onTelEvent(mapViewModel.telno)}"
+                            android:fontFamily="@font/font_hannaair"
+                            android:text="@{mapViewModel.telno}"
+                            android:textColor="@color/dpblue_80"
+                            android:textSize="20sp"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/font_hannaair"
+                        android:text="@{mapViewModel.startday}"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/font_hannaair"
+                            android:text="PCR 가능여부 : "
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/font_hannaair"
+                            android:text="@{mapViewModel.ispcr}"
+                            android:textSize="18sp"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/font_hannaair"
+                            android:text="신속 항원 검사 가능여부 : "
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/font_hannaair"
+                            android:text="@{mapViewModel.israt}"
+                            android:textSize="18sp"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:visibility="gone">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:text="요양종별코드" />
+
+                    <ImageView
+                        android:layout_width="150dp"
+                        android:layout_height="90dp"
+                        android:layout_marginTop="10dp"
+                        android:src="@drawable/img_covid_splash" />
+
+                    <ImageView
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:layout_gravity="right"
+                        android:layout_marginTop="10dp"
+                        android:src="@drawable/img_covid_splash" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:id="@+id/map_map_iv"
+                android:src="@drawable/baseline_directions_bus_black_36"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/map_call_iv"
+                android:layout_margin="25dp"
+                android:onClick="@{() -> mapViewModel.onNaverAppEvent(mapViewModel.lat,mapViewModel.lng,mapViewModel.hospitalname)}"
+                />
+
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:id="@+id/map_call_iv"
+                android:src="@drawable/baseline_call_black_36"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_margin="25dp"
+                android:onClick="@{() -> mapViewModel.onTelEvent(mapViewModel.telno)}"
+                />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
