--- a/Covid_Respiratory care/app/src/main/res/values/colors.xml
+++ b/Covid_Respiratory care/app/src/main/res/values/colors.xml
@@ -19,5 +19,5 @@
     <color name="dpblue_80">#801D74C5</color>
     <color name="navergreen">#66C971</color>
     <color name="navergreen_80">#8066C971</color>
-
+    <color name="daumblue">#608DF9</color>
 </resources>
