feat : 220512 네이버지도 실시간 위치 업데이트, 거리계산, Splash 업데이트 체크 최종 완료

--- a/Covid_Respiratory care/app/src/main/res/layout/activity_map.xml
+++ b/Covid_Respiratory care/app/src/main/res/layout/activity_map.xml
@@ -89,6 +89,16 @@
                             android:layout_marginStart="10dp"
                             android:textStyle="bold" />
 
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/font_hannaair"
+                            android:text="@{mapViewModel.dist.toString()}"
+                            android:textSize="16sp"
+                            android:textColor="@color/black"
+                            android:layout_marginStart="20dp"
+                            android:textStyle="bold" />
+
                     </LinearLayout>
 
                     <TextView
